deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-frontend
  template:
    metadata:
      labels:
        app: cloud-frontend
    spec:
      containers:
        - name: cloud-frontend
          image: 
          ports:
          - containerPort: 3000
