node.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport-service
  namespace: default
  labels:
    app: cloud-frontend-nodeport
spec:
  type: NodePort
  selector:
    app: cloud-frontend
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32000
