ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - safwanspehere.online
    secretName: cloud-kubernetes-tls
  rules:
  - host: "safwanspehere.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  ingressClassName: nginx
